--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -14,16 +14,8 @@ jobs:
   Configuration:
     runs-on: windows-latest
     steps:
-      - name: install graphviz
-        run: choco install graphviz
-      - name: install ninja
-        run: choco install ninja
-      - name: install make
-        run: choco install make
-      - name: install dos2unix
-        run: choco install dos2unix
-      - name: install doxygen
-        run: choco install doxygen.portable
+      - name: Install dependencies by choco
+        run: choco install graphviz ninja make dos2unix doxygen.portable
       - name: install cmake-format
         run: |
           pip install cmake-format
