--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,9 @@ trim_trailing_whitespace = false
 indent_style = space
 indent_size = 2
 insert_final_newline = false
+
+[*.csv]
+insert_final_newline = false
+
+[*.clang+]
+insert_final_newline = false
