--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,7 +86,13 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "unordered_set": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "csignal": "cpp",
+        "cstdarg": "cpp",
+        "cwctype": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "shared_mutex": "cpp"
     },
     "cmake.configureOnEdit": false,
     "cmake.configureArgs": [
