git update build linux

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,7 +92,13 @@
         "cwctype": "cpp",
         "numbers": "cpp",
         "semaphore": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "*.tcc": "cpp",
+        "memory_resource": "cpp",
+        "string_view": "cpp",
+        "cinttypes": "cpp",
+        "valarray": "cpp",
+        "*.def": "cpp"
     },
     "cmake.configureOnEdit": false,
     "cmake.configureArgs": [
