--- a/src/pingpong_game/CMakeLists.txt
+++ b/src/pingpong_game/CMakeLists.txt
@@ -3,94 +3,41 @@ project(pingpong_game)
 include(${CMAKE_CURRENT_LIST_DIR}/FetchLib.cmake)
 FetchLib()
 
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_FILES)
-list(APPEND GAME_SOURCE_FILE ${SOURCE_FILES})
-list(APPEND UTIL_SOURCE_FILES ${SOURCE_FILES})
-list(FILTER GAME_SOURCE_FILE INCLUDE REGEX "Game")
-list(FILTER UTIL_SOURCE_FILES EXCLUDE REGEX "Game")
-unset(SOURCE_FILES)
-
-file(GLOB_RECURSE HEADER_FILES LIST_DIRECTORIES false "*.hpp")
-list(APPEND GAME_HEADER_FILE ${HEADER_FILES})
-list(APPEND UTIL_HEADER_FILES ${HEADER_FILES})
-list(FILTER GAME_HEADER_FILE INCLUDE REGEX "Game")
-list(FILTER UTIL_HEADER_FILES EXCLUDE REGEX "Game")
-unset(HEADER_FILES)
-
-file(GLOB RESOURCE_FILES LIST_DIRECTORIES false
-    "${CMAKE_CURRENT_SOURCE_DIR}/resources/*.*"
-)
-
 list(APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/external/msvc-cl/mongo-cxx-driver")
-
-# include("${CMAKE_SOURCE_DIR}/external/mongo-cxx-driver/lib/cmake/mongocxx-3.10.3-pre/mongocxx-config.cmake")
 find_package(mongocxx REQUIRED)
+include("E:/VSC/a1_C_plus_plus/project-template/external/msvc-cl/mongo-cxx-driver/lib/cmake/mongocxx-3.10.2/mongocxx-config.cmake")
 
-add_library(${PROJECT_NAME}_util STATIC ${UTIL_SOURCE_FILES})
-target_link_libraries(
-    ${PROJECT_NAME}_util sfml-graphics sfml-audio rapidcsv magic_enum mongo::bson_static nlohmann_json::nlohmann_json mongo::bsoncxx_static
-)
-target_include_directories(
-    ${PROJECT_NAME}_util
-    PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>
-    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    INTERFACE $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/interface>
+add_subdirectory(utility)
+
+file(GLOB SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/*.cpp" "${CMAKE_CURRENT_LIST_DIR}/*.c")
+file(GLOB HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/include/*.hpp" "${CMAKE_CURRENT_LIST_DIR}/include/*.h")
+
+add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
+target_link_libraries(${PROJECT_NAME} PUBLIC pingpong_game_utility mongo::mongocxx_static)
+target_include_directories(${PROJECT_NAME} PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/interface>
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/interface>
 )
-target_sources(
-    ${PROJECT_NAME}_util PRIVATE FILE_SET ${PROJECT_NAME}_util_headers TYPE
-    HEADERS FILES "${UTIL_HEADER_FILES}"
-)
-target_sources(${PROJECT_NAME}_util PRIVATE ${RESOURCE_FILES})
-source_group("Resource Files" FILES ${RESOURCE_FILES})
-target_set_warnings(
-    TARGET ${PROJECT_NAME}_util ENABLE ${ENABLE_WARNINGS} AS_ERRORS
-    ${ENABLE_WARNINGS_AS_ERRORS}
-)
 
-add_library(${PROJECT_NAME} SHARED ${GAME_SOURCE_FILE})
-target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_util mongo::mongocxx_static)
-
-target_sources(
-    ${PROJECT_NAME} PRIVATE FILE_SET ${PROJECT_NAME}_headers TYPE HEADERS FILES
-    "${GAME_HEADER_FILE}"
-)
-set_target_properties(
-    ${PROJECT_NAME} PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON
-    PUBLIC_HEADER "${GAME_HEADER_FILE}"
-    PREFIX ""
-)
 target_set_warnings(
     TARGET ${PROJECT_NAME} ENABLE ${ENABLE_WARNINGS} AS_ERRORS
     ${ENABLE_WARNINGS_AS_ERRORS}
 )
 
-if(${CMAKE_CXX_COMPILER_ID} MATCHES "GNU")
-    target_compile_options(${PROJECT_NAME}_util PUBLIC -fPIC)
-endif(${CMAKE_CXX_COMPILER_ID} MATCHES "GNU")
+set_target_properties(
+    ${PROJECT_NAME} PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON
+    PUBLIC_HEADER "${CMAKE_CURRENT_LIST_DIR}/include/PingPongGame.hpp"
+    PREFIX ""
+)
+
+target_sources(
+    ${PROJECT_NAME} PRIVATE FILE_SET ${PROJECT_NAME}_headers TYPE HEADERS FILES
+    "${HEADER_FILES}"
+)
 
 if(WIN32)
-    add_custom_command(
-        TARGET ${PROJECT_NAME}_util
-        COMMENT "Copy OpenAL DLL"
-        PRE_BUILD
-        COMMAND
-        ${CMAKE_COMMAND} -E copy
-        ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll
-        $<TARGET_FILE_DIR:${PROJECT_NAME}>
-        VERBATIM
-    )
-    add_custom_command(
-        TARGET ${PROJECT_NAME}_util
-        POST_BUILD
-        COMMENT "Copy resources"
-        COMMAND
-        ${CMAKE_COMMAND} -E copy_directory_if_different
-        ${CMAKE_CURRENT_SOURCE_DIR}/resources
-        $<TARGET_FILE_DIR:${PROJECT_NAME}>/../resources
-        VERBATIM
-    )
-
     add_custom_command(
         TARGET ${PROJECT_NAME}
         POST_BUILD
@@ -106,12 +53,6 @@ endif()
 
 if(ENABLE_CLANG_TIDY)
     set_target_properties(
-        ${PROJECT_NAME}_util
-        PROPERTIES CXX_CLANG_TIDY
-        "clang-tidy;--config-file=${CMAKE_SOURCE_DIR}/.clang-tidy"
-    )
-
-    set_target_properties(
         ${PROJECT_NAME}
         PROPERTIES CXX_CLANG_TIDY
         "clang-tidy;--config-file=${CMAKE_SOURCE_DIR}/.clang-tidy"
@@ -119,7 +60,7 @@ if(ENABLE_CLANG_TIDY)
 endif(ENABLE_CLANG_TIDY)
 
 install(
-    TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_util
+    TARGETS ${PROJECT_NAME}
     EXPORT ${PROJECT_NAME}-targets
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
@@ -127,5 +68,3 @@ install(
     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
     COMPONENT PublicHeader
 )
-
-install(DIRECTORY resources/ DESTINATION "resources" COMPONENT Resources)
