--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ include(CMakeDependentOption)
 option(BUILD_CMAKE_FORMAT "enable cmake format" ON)
 option(BUILD_GRAPH "build graph" ON)
 option(BUILD_DOCS "build documentation" ON)
-option(BUILD_TEST "enable build test executable" OFF)
+option(BUILD_TEST "enable build test executable" ON)
 option(BUILD_CLANG_FORMAT "enable clang format" ON)
 option(ENABLE_WARNINGS "enable warnings" ON)
 option(ENABLE_WARNINGS_AS_ERRORS "enable warnings as errors" OFF)
