--- a/src/pingpong_game/CMakeLists.txt
+++ b/src/pingpong_game/CMakeLists.txt
@@ -5,20 +5,18 @@ FetchLib()
 
 list(APPEND CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/external/msvc-cl/mongo-cxx-driver")
 find_package(mongocxx REQUIRED)
-include("E:/VSC/a1_C_plus_plus/project-template/external/msvc-cl/mongo-cxx-driver/lib/cmake/mongocxx-3.10.2/mongocxx-config.cmake")
 
+# include("E:/VSC/a1_C_plus_plus/project-template/external/msvc-cl/mongo-cxx-driver/lib/cmake/mongocxx-3.10.2/mongocxx-config.cmake")
 add_subdirectory(utility)
 
 file(GLOB SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/*.cpp" "${CMAKE_CURRENT_LIST_DIR}/*.c")
 file(GLOB HEADER_FILES "${CMAKE_CURRENT_LIST_DIR}/include/*.hpp" "${CMAKE_CURRENT_LIST_DIR}/include/*.h")
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME} PUBLIC pingpong_game_utility mongo::mongocxx_static)
+target_link_libraries(${PROJECT_NAME} PUBLIC pingpong_game_utility)
 target_include_directories(${PROJECT_NAME} PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
     $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/interface>
-    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/interface>
 )
 
 target_set_warnings(
@@ -40,8 +38,19 @@ target_sources(
 if(WIN32)
     add_custom_command(
         TARGET ${PROJECT_NAME}
+        COMMENT " Copy OpenAL DLL "
+        PRE_BUILD
+        COMMAND
+        ${CMAKE_COMMAND} -E copy
+        ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll
+        $<TARGET_FILE_DIR:${PROJECT_NAME}>
+        VERBATIM
+    )
+
+    add_custom_command(
+        TARGET ${PROJECT_NAME}
         POST_BUILD
-        COMMENT "Copy resources"
+        COMMENT "Copy mongocxx driver"
         COMMAND
         ${CMAKE_COMMAND} -E copy_directory_if_different
         "${CMAKE_SOURCE_DIR}/external/msvc-cl/mongo-cxx-driver/bin"
