--- a/src/pingpong_game/CMakeLists.txt
+++ b/src/pingpong_game/CMakeLists.txt
@@ -29,6 +29,7 @@ set_target_properties(
     PUBLIC_HEADER "${CMAKE_CURRENT_LIST_DIR}/include/PingPongGame.hpp"
     PREFIX ""
     FOLDER "PingPong Game"
+    VS_DEBUGGER_ENVIRONMENT "AUTHOR=DuyLD"
 )
 
 if(ENABLE_CLANG_TIDY AND(THIS_COMPILER_GCC OR THIS_COMPILER_CLANG OR THIS_COMPILER_CLANG_CL))
