--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 project(src)
 
+add_subdirectory(widget)
 add_subdirectory(pingpong_game)
 
 install(
     DIRECTORY interface DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
     COMPONENT PublicHeader
-    )
+)
