--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,6 @@
 project(Catch-test)
 
-FetchContent_Declare(
-    Catch2 GIT_REPOSITORY https://github.com/catchorg/Catch2.git GIT_TAG v3.6.0
-)
+FetchContent_Declare(Catch2 GIT_REPOSITORY https://github.com/catchorg/Catch2.git GIT_TAG v3.6.0)
 FetchContent_MakeAvailable(Catch2)
 
 add_executable(${PROJECT_NAME} test.cpp)
@@ -12,9 +10,8 @@ target_link_libraries(${PROJECT_NAME} PRIVATE pingpong_game)
 target_link_libraries(${PROJECT_NAME} PRIVATE Catch2WithMain)
 
 set_target_properties(
-    ${PROJECT_NAME} PROPERTIES INSTALL_RPATH
-    ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}
-)
+    ${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}
+    )
 
 set_target_properties(${PROJECT_NAME} Catch2 Catch2WithMain PROPERTIES FOLDER "Test")
 
@@ -22,9 +19,7 @@ list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
 include(Catch)
 catch_discover_tests(${PROJECT_NAME})
 
-file(GLOB RESOURCE_FILES LIST_DIRECTORIES false
-    "${CMAKE_CURRENT_SOURCE_DIR}/resources/*.*"
-)
+file(GLOB RESOURCE_FILES LIST_DIRECTORIES false "${CMAKE_CURRENT_SOURCE_DIR}/resources/*.*")
 target_sources(${PROJECT_NAME} PUBLIC "${RESOURCE_FILES}")
 source_group("Resource Files" FILES ${RESOURCE_FILES})
 
@@ -34,11 +29,10 @@ if(WIN32)
         POST_BUILD
         COMMENT "Copy resources"
         COMMAND
-        ${CMAKE_COMMAND} -E copy_directory_if_different
-        ${CMAKE_CURRENT_SOURCE_DIR}/resources
-        $<TARGET_FILE_DIR:${PROJECT_NAME}>/../resources
+            ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/resources
+            $<TARGET_FILE_DIR:${PROJECT_NAME}>/../resources
         VERBATIM
-    )
+        )
 endif()
 
 install(
@@ -46,6 +40,6 @@ install(
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
-)
+    )
 
 install(DIRECTORY resources DESTINATION ".")
