--- a/.github/workflows/ubuntu-test.yml
+++ b/.github/workflows/ubuntu-test.yml
@@ -7,7 +7,12 @@ jobs:
     container:
       image: duyleduc520/mysfmlapp:latest
     steps:
-      - uses: ./.github/actions/build/action.yml
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+      - name: Build project
+        uses: ./.github/actions/build/action.yml
         with:
           preset: ubuntu
         
