--- a/.github/workflows/ubuntu-test.yml
+++ b/.github/workflows/ubuntu-test.yml
@@ -12,6 +12,10 @@ jobs:
         with:
           submodules: true
       - name: Build project
+        env:
+          MONGODB_NAME: ${{ vars.MONGODB_NAME}}
+          MONGODB_COLL: ${{ vars.MONGODB_COLL }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
         uses: ./.github/actions/build
         with:
           preset: ubuntu
