--- a/.github/workflows/ubuntu-test.yml
+++ b/.github/workflows/ubuntu-test.yml
@@ -16,7 +16,25 @@ jobs:
           MONGODB_NAME: ${{ vars.MONGODB_NAME}}
           MONGODB_COLL: ${{ vars.MONGODB_COLL }}
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          MONGODB_TEST_URI: 'mongodb://root:example@mongo:27017/'
         uses: ./.github/actions/build
         with:
           preset: ubuntu
+    services:
+      mongo:
+        image: mongo:latest
+        ports:
+          - 27017:27017
+        env:
+          MONGODB_INITDB_ROOT_USERNAME: 'root'
+          MONGODB_INITDB_ROOT_PASSWORD: 'example'
+      mongo-express:
+        image: mongo-express
+        ports:
+          - 8081:8081
+        env:
+          ME_CONFIG_MONGODB_ADMINUSERNAME: 'root'
+          ME_CONFIG_MONGODB_ADMINPASSWORD: 'example'
+          ME_CONFIG_MONGODB_URL: 'mongodb://root:example@mongo:27017/'
+          ME_CONFIG_BASICAUTH: false
         
